--- a/index.css
+++ b/index.css
@@ -43,11 +43,11 @@ html, body {
     background-image: linear-gradient(to bottom, transparent, transparent ,transparent, black);
 }
 
-.title{
+.title {
     z-index: 1;
     width: 60%;
-    font-size:28px;
-    font-weight: bold;
+    font-size: 28px;
+    font-weight: bolder;
     color: white;
     position: absolute;
     bottom: 1%;
@@ -71,6 +71,7 @@ html, body {
     width: 67%;
     transition: ease-in-out .7s;
     transform: translateY(20px);
+    font-weight: 800;
 }
 
 .item:hover .detail h2 {
@@ -82,6 +83,7 @@ html, body {
     width: 77%;
     transition: ease-in-out .7s;
     transform: translateY(20px) scale(0.7);
+    font-weight: 800;
 }
 
 .item:hover .detail p {
